[project]
name = "cairo_addons"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["cairo-lang>=0.13.3"]

[tool.isort]
profile = "black"

[dependency-groups]
dev = ["jupyter>=1.1.1", "pytest>=8.3.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cairo_addons"]
